# Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/: ReadMe.md
src/: GameTime.cpp  Tribe.cpp  Tribe.h  main.cpp  pch.h
src/engine/: Engine.cpp  Engine.h  GameTime.h  Renderer.cpp  Renderer.h  Tribe.cpp  Tribe.h
src/hierarchy/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/render/: Renderer.cpp
tribe/: GameTime.cpp  GameTime.h  Tribe.cpp  Tribe.h  pch.h
tribe/core/: InputManager.cpp  InputManager.h
tribe/hierarchy/: Base.cpp  Base.h  BaseObject.cpp  BaseObject.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
tribe/hierarchy/components/: Component.h  MeshComponent.cpp  MeshComponent.h  RenderComponent.cpp  RenderComponent.h  TransformComponent.cpp  TransformComponent.h
tribe/render/: Renderer.cpp  Renderer.h  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h
tribe/utils/: Locator.h  Singleton.h
